--- a/app/src/main/res/layout/fragment_intro1.xml
+++ b/app/src/main/res/layout/fragment_intro1.xml
@@ -59,54 +59,26 @@
         android:layout_weight="1"/>
 
     <TextView
-        android:id="@+id/tip1"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
+        style="@style/IntroTip"
         android:drawableLeft="@drawable/point_yellow"
         android:drawableStart="@drawable/point_yellow"
-        android:gravity="center_vertical"
-        android:text="@string/intro1_1"
-        android:textColor="@color/color_white"/>
+        android:text="@string/intro1_1"/>
 
     <TextView
-        android:id="@+id/tip2"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
+        style="@style/IntroTip"
         android:drawableLeft="@drawable/point_indigo"
         android:drawableStart="@drawable/point_indigo"
-        android:gravity="center_vertical"
-        android:text="@string/intro1_2"
-        android:textColor="@color/color_white"/>
+        android:text="@string/intro1_2"/>
 
     <TextView
-        android:id="@+id/tip3"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
+        style="@style/IntroTip"
         android:drawableLeft="@drawable/point_blue"
         android:drawableStart="@drawable/point_blue"
-        android:gravity="center_vertical"
-        android:text="@string/intro1_3"
-        android:textColor="@color/color_white"/>
+        android:text="@string/intro1_3"/>
 
     <TextView
-        android:id="@+id/tip4"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"
+        style="@style/IntroTip"
         android:drawableLeft="@drawable/point_red"
         android:drawableStart="@drawable/point_red"
-        android:gravity="center_vertical"
-        android:text="@string/intro1_4"
-        android:textColor="@color/color_white"/>
+        android:text="@string/intro1_4"/>
 </LinearLayout>
