--- a/app/src/main/res/layout/fragment_intro_login.xml
+++ b/app/src/main/res/layout/fragment_intro_login.xml
@@ -26,9 +26,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_grey_050"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:ignore="UseCompoundDrawables">
+    android:gravity="center_horizontal">
 
     <fragment
         android:id="@+id/login_screen"
