--- a/app/src/main/res/xml/preferences_map.xml
+++ b/app/src/main/res/xml/preferences_map.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -86,14 +86,12 @@
         android:entryValues="@array/map_bg_val"
         android:key="map_bg"
         android:title="@string/map_bg"/>
-    bui/blob/master/src/main/res/values/arrays.xml#L107
-    <com.nextgis.mobile.dialog.SelectMapPathDialogPreference
-        android:dialogTitle="@string/select_map_path"
+    <!--bui/blob/master/src/main/res/values/arrays.xml#L107-->
+
+    <com.nextgis.mobile.util.SelectMapPathPreference
         android:key="map_path"
-        android:negativeButtonText="@string/cancel"
-        android:positiveButtonText="@string/select"
-        android:summary="@string/map_path_summary"
-        android:title="@string/map_path"/>
+        android:title="@string/map_path"
+        android:summary="@string/map_path_summary"/>
 
     <!-- TODO:
     1) tile size
