--- a/app/src/main/res/xml/preferences_map.xml
+++ b/app/src/main/res/xml/preferences_map.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2018 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2015-2018, 2020 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -106,6 +106,9 @@
         android:title="@string/map_path"
         android:summary="@string/map_path_summary"/>
 
+    <Preference
+        android:key="restore_layers"
+        android:title="@string/restore_layers"/>
     <!-- TODO:
     1) tile size
     2) drawing canvas size in percent   -->
