--- a/app/src/main/res/layout/status_panel.xml
+++ b/app/src/main/res/layout/status_panel.xml
@@ -38,6 +38,11 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            >
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_latitude"
@@ -48,6 +53,15 @@
             android:id="@+id/tv_longitude"
             style="@style/status_panel_text"
             android:gravity="center"/>
+        </LinearLayout>
+
+        <com.nextgis.mobile.util.AutoFitTextView
+            android:id="@+id/tv_zoom"
+            style="@style/status_panel_text"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text=""
+            />
     </LinearLayout>
 
     <LinearLayout
