--- a/app/src/main/res/layout-land/status_panel.xml
+++ b/app/src/main/res/layout-land/status_panel.xml
@@ -22,81 +22,59 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/status_container"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="?attr/colorPrimary"
-              android:gravity="center_vertical"
-              android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/tv_zoom"
-            >
-
-        <com.nextgis.mobile.util.AutoFitTextView
-            android:id="@+id/tv_latitude"
-            style="@style/status_panel_text"
-            android:gravity="center"/>
-
-        <com.nextgis.mobile.util.AutoFitTextView
-            android:id="@+id/tv_longitude"
-            style="@style/status_panel_text"
-            android:gravity="center"/>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_zoom"
-            style="@style/status_panel_text"
-            android:gravity="center"
-            android:text="17z"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_alignParentRight="true"
-            />
-
-    </RelativeLayout>
+<FrameLayout android:id="@+id/status_container_land"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/colorPrimary"
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_gravity="top"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+        android:padding="5dp">
 
-        <com.nextgis.mobile.util.AutoFitTextView
+        <TextView
+            android:id="@+id/tv_latitude"
+            style="@style/status_panel_text_land"
+            android:layout_weight="3"/>
+
+        <TextView
+            android:id="@+id/tv_longitude"
+            style="@style/status_panel_text_land"
+            android:layout_weight="3"/>
+
+        <TextView
+            android:id="@+id/tv_zoom"
+            style="@style/status_panel_text_land"
+            android:layout_weight="1"/>
+
+        <TextView
             android:id="@+id/tv_source"
-            style="@style/status_panel_text"/>
+            style="@style/status_panel_text_land"
+            android:layout_weight="1"/>
 
-        <com.nextgis.mobile.util.AutoFitTextView
+        <TextView
             android:id="@+id/tv_accuracy"
-            style="@style/status_panel_text"
+            style="@style/status_panel_text_land"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_accuracy"
             android:drawableStart="@drawable/ic_accuracy"/>
 
-        <com.nextgis.mobile.util.AutoFitTextView
+        <TextView
             android:id="@+id/tv_altitude"
-            style="@style/status_panel_text"
+            style="@style/status_panel_text_land"
+            android:layout_weight="1"
             android:drawableLeft="@drawable/ic_altitude"
             android:drawableStart="@drawable/ic_altitude"/>
 
-        <com.nextgis.mobile.util.AutoFitTextView
+        <TextView
             android:id="@+id/tv_speed"
-            style="@style/status_panel_text"
+            style="@style/status_panel_text_land"
+            android:layout_weight="2"
             android:drawableLeft="@drawable/ic_speed"
             android:drawableStart="@drawable/ic_speed"/>
     </LinearLayout>
@@ -105,6 +83,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dip"
+        android:layout_gravity="bottom"
         android:background="@color/color_grey_400"/>
 
-</LinearLayout>
+</FrameLayout>
